--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,77 @@
+# ============================================
 # VERDEFICA - DASH VERSION
-# Requirements para app Dash
+# Requirements completos para todos os aspectos técnicos do projeto
+# ============================================
 
-# Core Dash
+# ============================================
+# Core Dash e Framework Web
+# ============================================
 dash>=2.14.0
 dash-bootstrap-components>=1.5.0
+Flask>=2.0.0,<3.2
+Werkzeug>=2.0.0,<3.2
 
-# Data manipulation
+# ============================================
+# Manipulação de Dados
+# ============================================
 pandas>=1.5.0
 numpy>=1.21.0
 
-# Visualizações
+# ============================================
+# Visualizações e Gráficos
+# ============================================
 plotly>=5.17.0
 
-# Mapas e coordenadas
+# ============================================
+# Mapas e Coordenadas Geográficas
+# ============================================
 pyproj>=3.7.0
 folium>=0.14.0
+branca>=0.6.0
 
-# Server (para deploy)
+# ============================================
+# Machine Learning e Análise Estatística
+# ============================================
+scikit-learn>=1.0.0
+scipy>=1.8.0
+joblib>=1.2.0
+threadpoolctl>=3.1.0
+
+# ============================================
+# Servidor e Deploy
+# ============================================
 gunicorn>=21.2.0
 
-# Optional: melhor performance
+# ============================================
+# Performance e Cache
+# ============================================
 flask-caching>=2.1.0
+cachelib>=0.9.0
 
-# Machine Learning
-scikit-learn>=1.0.0
+# ============================================
+# Utilitários Essenciais
+# ============================================
+setuptools>=65.0.0
+requests>=2.28.0
+retrying>=1.3.4
+nest-asyncio>=1.5.0
+importlib-metadata>=4.0.0
+typing-extensions>=4.1.1
+python-dateutil>=2.8.2
+pytz>=2020.1
+tzdata>=2022.7
+
+# ============================================
+# Dependências de Segurança e Compatibilidade
+# ============================================
+blinker>=1.9.0
+click>=8.1.3
+itsdangerous>=2.2.0
+Jinja2>=3.1.2
+MarkupSafe>=2.1.1
+packaging>=21.0
+certifi>=2022.0.0
+charset-normalizer>=2.0.0
+idna>=2.5
+urllib3>=1.26.0
+six>=1.16.0
