Atualiza instruções de configuração do projeto e requisitos de dependências
- Expande o guia de instalação com detalhes sobre a configuração do ambiente Python e React.
- Adiciona seções para pré-requisitos, instalação de dependências e execução do projeto.
- Esclarece a estrutura de diretórios e a necessidade de build do React.
- Atualiza o arquivo `requirements.txt` para incluir notas sobre dependências do React.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,14 @@
 # VERDEFICA - DASH VERSION
 # Requirements completos para todos os aspectos técnicos do projeto
 # ============================================
+#
+# NOTA: Este arquivo contém apenas dependências Python.
+# Para a página React (Seletor de Espécies), são necessárias:
+# - Node.js (v16 ou superior) e npm
+# - Dependências estão em: tela/package.json
+# - Para instalar: cd tela && npm install
+# - Para fazer build: cd tela && npm run build
+# ============================================
 
 # ============================================
 # Core Dash e Framework Web
