Atualiza configuração do projeto para deploy e adiciona script de build
- Modifica o arquivo `.gitignore` para incluir diretórios e arquivos relacionados ao Node.js e logs.
- Atualiza `app.py` para usar variáveis de ambiente para configuração de porta e modo de debug.
- Adiciona script `build.sh` para automatizar a instalação de dependências e build do React.
- Cria arquivo `render.yaml` para configuração do serviço no Render, incluindo comandos de build e variáveis de ambiente.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,20 @@ instance/
 .webassets-cache
 errors.log
 debug.log
+
+# Node.js / React
+node_modules/
+tela/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build do React (gerado durante deploy, não precisa commitar)
+tela_build/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
